add banama photos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Honion Recipes</h1>
-        <a href="recipes/banama_breab.html">it made from BANAMAS</a>
+        <a href="recipes/banama_breab/banama_breab.html">it made from BANAMAS</a>
     </body>
 </html>
