--- a/recipes/banama_breab/banama_breab.html
+++ b/recipes/banama_breab/banama_breab.html
@@ -6,5 +6,12 @@
     </head>
     <body>
         <h1>it made from BANAMAS</h1>
+        <p>
+            <img src="./banamabreab_photos/Banana-Single.jpeg" alt="it a banama">
+        </p>
+        <p>
+            <img src="./banamabreab_photos/moist-banana-bread.jpeg" alt="it breab">
+        </p>
+       
     </body>
 </html>
