resized banama pics

--- a/recipes/banama_breab/banama_breab.html
+++ b/recipes/banama_breab/banama_breab.html
@@ -7,10 +7,10 @@
     <body>
         <h1>it made from BANAMAS</h1>
         <p>
-            <img src="./banamabreab_photos/Banana-Single.jpeg" alt="it a banama">
+            <img src="./banamabreab_photos/Banana-Single.jpeg" alt="it a banama" width="400">
         </p>
         <p>
-            <img src="./banamabreab_photos/moist-banana-bread.jpeg" alt="it breab">
+            <img src="./banamabreab_photos/moist-banana-bread.jpeg" alt="it breab" width="400">
         </p>
        
     </body>
