added some text about banamas

--- a/recipes/banama_breab/banama_breab.html
+++ b/recipes/banama_breab/banama_breab.html
@@ -9,9 +9,19 @@
         <p>
             <img src="./banamabreab_photos/Banana-Single.jpeg" alt="it a banama" width="400">
         </p>
+            <p>this is a banama</p>
         <p>
             <img src="./banamabreab_photos/moist-banana-bread.jpeg" alt="it breab" width="400">
         </p>
+            <h4><em>this is some breb</em></h4>
+            <p>I want to make this banama breb for the honion. Other foods do not sound good
+                at the moment. I like banama breb because it has lots of vitamins and minerals
+                and it is very gentry. Thank you to banama breab for being sweet and buttery. I
+                have not started making this banama breb because I am still thinking about it.
+            </p>
+            <p>
+                I think I will start making the breab soon.
+            </p>
        
     </body>
 </html>
