finished page on banamas

--- a/recipes/banama_breab/banama_breab.html
+++ b/recipes/banama_breab/banama_breab.html
@@ -22,6 +22,21 @@
             <p>
                 I think I will start making the breab soon.
             </p>
-       
+            <h4>ingredients for this breb</h4>
+                <ul>
+                    <li>some banamas</li>
+                    <li>some flour</li>
+                    <li>some eggs</li>
+                    <li>some butter</li>
+                    <li>an onion kiss</li>
+                </ul>
+            <h4>how to make this breb</h4>
+                <ol>
+                    <li>first you mash the banamas</li>
+                    <li>then you add the eggs and butters</li>
+                    <li>hope you already preheated the oven??</li>
+                    <li>put everything in there and cook</li>
+                    <li>now you have banama breab</li>
+                </ol>
     </body>
 </html>
