--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     </head>
     <body>
         <h1>Honion Recipes</h1>
-        <a href="recipes/banama_breab/banama_breab.html">it made from BANAMAS</a>
+        <ul>
+            <li><a href="recipes/banama_breab/banama_breab.html">it made from BANAMAS</a></li>
+            <li><a href="recipes/fish_taco/fish_taco.html">taco with a lil fishy inside</a></li>
+        </ul>
     </body>
 </html>
