--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <ul>
             <li><a href="recipes/banama_breab/banama_breab.html">it made from BANAMAS</a></li>
             <li><a href="recipes/fish_taco/fish_taco.html">taco with a lil fishy inside</a></li>
+            <li><a href="recipes/baby_chicken/baby_chicken.html">a baby chicken</a></li>
         </ul>
     </body>
 </html>
