--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>it about some foods</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Honion Recipes</h1>
-        <ul>
-            <li><a href="recipes/banama_breab/banama_breab.html">it made from BANAMAS</a></li>
-            <li><a href="recipes/fish_taco/fish_taco.html">taco with a lil fishy inside</a></li>
-            <li><a href="recipes/baby_chicken/baby_chicken.html">a baby chicken</a></li>
-        </ul>
+        <span class="left">
+           <a href="recipes/banama_breab/banama_breab.html">it made from BANAMAS</a>
+        </span>
+        <span class="center">
+           <a href="recipes/fish_taco/fish_taco.html">taco with a lil fishy inside</a>
+        </span>
+        <span class="right">
+           <a href="recipes/baby_chicken/baby_chicken.html">a baby chicken</a>
+        </span>
     </body>
 </html>
