added css style

--- a/recipes/baby_chicken/baby_chicken.html
+++ b/recipes/baby_chicken/baby_chicken.html
@@ -3,11 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>delicious baby chicken</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
+        <div class="center">
         <h1>Baby Chicken</h1>
-        <img src="babychicken_photos/babychicken.jpeg" alt="aww so cute" width="400">
+        <img src="babychicken_photos/babychicken.jpeg" alt="aww so cute">
         <h4>this is a delicious baby chicken</h4>
+        </div>
         <p>
             So this is a very cute and delicious snack. Maybe it is too tiny
             and furry to eat. But if you wait a few months you can eat it.
