--- a/recipes/banama_breab/banama_breab.html
+++ b/recipes/banama_breab/banama_breab.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <title>it some banama breab</title>
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>it made from BANAMAS</h1>
-        <p>
-            <img src="./banamabreab_photos/Banana-Single.jpeg" alt="it a banama" width="400">
-        </p>
-            <p>this is a banama</p>
-        <p>
-            <img src="./banamabreab_photos/moist-banana-bread.jpeg" alt="it breab" width="400">
-        </p>
-            <h4><em>this is some breb</em></h4>
+        <h1 class="center">it made from BANAMAS</h1>
+        <div class="center">
+        <img src="./banamabreab_photos/Banana-Single.jpeg" alt="it a banama">
+        </div>
+        <p class="center">this is a banama</p>
+        <div class="center">
+        <img src="./banamabreab_photos/moist-banana-bread.jpeg" alt="it breab">
+        </div>
+            <h4 class="center"><em>this is some breb</em></h4>
             <p>I want to make this banama breb for the honion. Other foods do not sound good
                 at the moment. I like banama breb because it has lots of vitamins and minerals
                 and it is very gentry. Thank you to banama breab for being sweet and buttery. I
