--- a/recipes/fish_taco/fish_taco.html
+++ b/recipes/fish_taco/fish_taco.html
@@ -3,8 +3,10 @@
     <head>
         <meta charset="UTF-8">
        <title>taco with a lil fishy inside</title>
+       <link rel="stylesheet" href="../style.css">
     </head>
     <body>
+        <div class="center">
         <h1>Fishy Tacos</h1>
         <p>
             <img src="fishtaco_photos/fish.jpeg" alt="it a fish" width="400">
@@ -15,6 +17,7 @@
         <p>
             <h4>taco with a lil fishy inside</h4>
         </p>
+        </div>
         <p>
             So this is a kind of sandwich called a taco. It comes with flat bread and you
             put a lil fishy inside. The fish is kind of a tube or chunk shape with crispy
